{
  "@@locale": "ja",
  "myPetMelody": "うちのコメロディー",
  "letsCreateAccount": "アカウントを\n作成しよう",
  "letsLoginAccount": "アカウントに\nログインしよう",
  "accountCreationReasonDescription": "大切な作品をバックアップするために、アカウントを作成してね！",
  "accountLoginReasonDescription": "大切な作品をバックアップするために、ログインしてね！",
  "continueWithGoogle": "Googleで続ける",
  "continueWithApple": "Appleで続ける",
  "loginIfYouHaveAccount": "アカウントをお持ちの方はログインへ",
  "createAccountIfYouHaveNoAccount": "アカウントを作成する",
  "continueWithoutCreatingAccount": "アカウントを作成せずに続ける",
  "continueWithoutLogin": "ログインせずに続ける",
  "googleAccountIsAlreadyUsedErrorDescription": "このGoogleアカウントはすでに利用されています。他のアカウントでお試しください",
  "appleAccountIsAlreadyUsedErrorDescription": "このAppleアカウントはすでに利用されています。他のアカウントでお試しください",
  "unknownErrorDescription": "エラーが発生しました。しばらくしてから再度お試しください",
  "updateAppDescription": "新しいバージョンがリリースされています。より良い作品を作るために、アップデートしてご利用ください",
  "update": "アップデートする",
  "createdPieces": "つくった作品",
  "noPiecesDescription": "まだ作品を制作していません。\n右下の “+” ボタンから作品を制作しましょう。",
  "createPiece": "作品をつくる",
  "pieceExpiredDescription": "作品の保存期限が切れています。この作品を閲覧するには、プレミアムプランへの加入を検討してください。",
  "aboutPremiumPlan": "プレミアムプランとは",
  "generating": "制作中...",
  "retentionPeriodFormat": "保存期限: {date} {time}",
  "@retentionPeriodFormat": {
    "placeholders": {
      "date": {
        "type": "DateTime",
        "format": "yMd"
      },
      "time": {
        "type": "DateTime",
        "format": "Hm"
      }
    }
  },
  "accessiblePiecesCountReachedTheMaxErrorDescription": "所有できる作品の最大数を超えました。新しく作品をつくるには、今ある作品の保存期限が過ぎるのを待つか、プレミアムプランへの加入を検討してください。",
  "accessiblePiecesCountReachedTheMaxWarningDescription": "所有できる作品の最大数を超えました。新しく作品を1つ完成させると過去の作品が1つ削除されていきます。",
  "doNotShowAgain": "今後表示しない",
  "doContinue": "続ける",
  "cancel": "キャンセル",
  "step1Of5": "STEP 1/5",
  "selectTemplate": "作品のBGMを選ぼう",
  "selectTemplateDescription": "選んだBGMに鳴き声が入るよ！",
  "newDescription": "New",
  "publishDateFormat": "{date}",
  "@publishDateFormat": {
    "placeholders": {
      "date": {
        "type": "DateTime",
        "format": "yMd"
      }
    }
  },
  "step2Of5": "STEP 2/5",
  "selectSound": "鳴き声の動画を選ぼう",
  "selectSoundDescription": "あなたのねこが鳴いてる動画を選んでね！",
  "selectVideo": "動画を選択する",
  "selectingVideo": "動画を選択しています",
  "step3Of5": "STEP 3/5",
  "selectRange": "鳴き声の範囲を選ぼう",
  "selectRangeDescription": "選択した範囲から自動で鳴き声を探すよ！",
  "goToNext": "次へ",
  "convertingVideoDescription": "動画を変換しています。\nこれには数分かかる場合があります",
  "searchingSoundDescription": "動画の中から鳴き声を探しています。\nこれには数分かかる場合があります",
  "step4Of5": "STEP 4/5",
  "selectMeow": "鳴き声を選ぼう",
  "selectMeowDescription": "再生するとすぐに鳴き声が聞こえるものを選んでね！この中にない場合は自分でトリミングしてみてね！",
  "trimManually": "自分でトリミングする",
  "manualTrimmingIsRestrictedDescription": "自分でトリミングして鳴き声を設定するには、プレミアムプランに加入してください。",
  "selectNThMeow": "{index}番目の鳴き声を選択する",
  "@selectNThMeow": {
    "placeholders": {
      "index": {
        "type": "int",
        "format": "decimalPattern"
      }
    }
  },
  "numberN": "No. {number}",
  "@numberN": {
    "placeholders": {
      "number": {
        "type": "int",
        "format": "decimalPattern"
      }
    }
  },
  "nSeconds": "{seconds}秒",
  "@nSeconds": {
    "placeholders": {
      "seconds": {
        "type": "String"
      }
    }
  },
  "uploading": "アップロードしています",
  "noMeowsWereFound": "鳴き声が\n見つかりませんでした",
  "noMeowsWereFoundDescription": "自分で鳴き声部分をトリミングして設定してね！",
  "step4TrimmingOf5": "STEP 4/5 トリミング",
  "trimMeow": "鳴き声を切り取ろう",
  "trimMeowDescription": "切り取った範囲がそのまま作品で再生されるよ！",
  "step5Of5": "STEP 5/5",
  "setTitleOfPiece": "作品にタイトルを\nつけよう",
  "titleOfPiece": "作品のタイトル",
  "goToPreparation": "作品をつくる準備に進む",
  "generatePiece": "作品をつくる",
  "submitting": "提出しています",
  "preparationToGeneratePiece": "依頼前の準備",
  "allowPushNotification": "プッシュ通知を\n許可しよう",
  "allowPushNotificationDescription": "作品が完成したときに通知が受け取れるよ！通知を許可してね！",
  "allowAndGeneratePiece": "許可して作品をつくる",
  "notAllowAndGeneratePiece": "許可しないで作品をつくる",
  "generationOfPieceHasBegun": "作品の制作が\n開始されました",
  "waitALittleDescription": "完成まで少し待ってね！",
  "waitAFewMinutesDescription": "完成までしばらく待ってね！5分くらいかかるよ！",
  "completePieceRightNow": "いますぐ作品を完成させる",
  "completePieceRightNowIsRestrictedDescription": "制作の待ち時間を減らすにはプレミアムプランに加入してください。",
  "thisScreenWillBeClosedInNSeconds": "この画面はあと{seconds}秒で自動的に閉じます。",
  "@thisScreenWillBeClosedInNSeconds": {
    "placeholders": {
      "seconds": {
        "type": "int",
        "format": "decimalPattern"
      }
    }
  },
  "settings": "設定",
  "noNameLabel": "(名前未設定)",
  "createAccount": "アカウントを作成する",
  "currentPlan": "現在のプラン",
  "freePlan": "フリープラン",
  "premiumPlan": "プレミアムプラン",
  "subscribeToPremiumPlan": "プレミアムプランに登録する",
  "writeReview": "レビューを書く",
  "shareWithFriends": "友達に教える",
  "termsOfUse": "利用規約",
  "privacyPolicy": "プライバシーポリシー",
  "debug": "デバッグ",
  "version": "バージョン",
  "deleteAccount": "アカウント削除",
  "shareWithFriendsSentence": "あなたのネコのオリジナルソングを作ろう！ {url}",
  "@shareWithFriendsSentence": {
    "placeholders": {
      "url": {
        "type": "String"
      }
    }
  },
  "deleteAccountDescription": "本当にアカウントを削除しますか？削除すると、これまで制作した作品を閲覧できなくなります。",
  "delete": "削除する",
  "deletingAccount": "アカウントを削除しています",
  "accountCreation": "アカウント作成",
  "largerCreationSpace": "広大な制作スペース",
  "largerCreationSpaceDescription": "最大{maxNumber}作品を保存しておくことができるようになります。",
  "@largerCreationSpaceDescription": {
    "placeholders": {
      "maxNumber": {
        "type": "int",
        "format": "decimalPattern"
      }
    }
  },
  "fasterGenerationSpeed": "高速な制作スピード",
  "fasterGenerationSpeedDescription": "フリープランよりも優先して作品制作が行われるようになり、作品完成までの待ち時間が短くなります。",
  "higherCreationQuality": "高い制作クオリティ",
  "higherCreationQualityDescription": "自分でトリミングした鳴き声を作品に指定できるようになります。",
  "alreadyJoinedPremiumPlan": "プレミアムプランに加入済み",
  "noPurchasablePlanWasFound": "購入可能な商品が見つかりません",
  "restoreWhenChangedDevice": "機種変更時の復元",
  "aboutAutomaticRecurringBilling": "自動継続課金について",
  "aboutAutomaticRecurringBillingDescription": "期間終了日の24時間以上前に自動更新の解除を行わない場合、契約期間が自動更新されます。",
  "confirmationAndCancellation": "確認と解約",
  "confirmationAndCancellationDescriptionForIOS": "設定アプリを開き、[ご自分の名前] > [サブスクリプション] > [うちのコメロディー]の画面から、次回の自動更新タイミングの確認や、自動更新の解除ができます。",
  "confirmationAndCancellationDescriptionForAndroid": "Play ストアアプリを開き、設定 > [定期購入] > [うちのコメロディー]の画面から、次回の自動更新タイミングの確認や、自動更新の解除ができます。",
  "restorationWhenChangedDevice": "機種変更時の復元",
  "restorationWhenChangedDeviceDescriptionForIOS": "機種変更時には、本画面から以前購入したプランを無料で復元できます。購入時と同じ Apple ID で App Store にログインした上で復元してください。",
  "restorationWhenChangedDeviceDescriptionForAndroid": "機種変更時には、本画面から以前購入したプランを無料で復元できます。購入時と同じ Google アカウントで Play ストアにログインした上で復元してください。",
  "pointsToNote": "注意点",
  "pointsToNoteDescriptionForIOS": "アプリ内で課金された方は上記以外の方法での解約できません。当月分のキャンセルについては受け付けておりません。Apple ID アカウントを経由して課金されます。",
  "pointsToNoteDescriptionForAndroid": "アプリ内で課金された方は上記以外の方法での解約できません。当月分のキャンセルについては受け付けておりません。Google アカウントを経由して課金されます。",
  "youHaveJoinedPremiumPlan": "プレミアムプランに加入しました",
  "purchasedPlanHasBeenRestored": "購入履歴を復元しました"
}
