...
      }
    }
  },
  "accessiblePiecesCountReachedTheMaxErrorDescription": "You have reached the maximum number of pieces you can access. To create a new piece, please wait until the oldest piece's access expired or consider subscribing to premium plan.",
  "accessiblePiecesCountReachedTheMaxWarningDescription": "You have reached the maximum number of pieces you can access. When you create a new piece, one oldest piece will be deleted.",
  "doNotShowAgain": "Don't show again",
  "doContinue": "Continue",
  "cancel": "Cancel",
  "step1Of5": "STEP 1/5",
  "selectTemplate": "Choose BGM for your piece",
  "selectTemplateDescription": "Your pet's sounds will be included in the selected BGM!",
  "newDescription": "New",
  "publishDateFormat": "{date}",
...
