appId: ide.shota.colomney.MyPetMelody${APP_ID_SUFFIX}
---
- addMedia:
    - "大きい鳴き声-01.mp4"
- launchApp
- runFlow:
    when:
      visible: "アカウントを作成せずに続ける"
    commands:
      - tapOn: "アカウントを作成せずに続ける"
- tapOn: "作品をつくる"
- tapOn: "Happy Birthday オルゴール.*"
- tapOn: "動画を選択する"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "ビデオ, 十四秒.*"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "大きい鳴き声-01.MP4"
- tapOn: "次へ"
- tapOn: "0番目の鳴き声を選択する"
- tapOn: "次へ"
- assertVisible: "作品のタイトル"
- inputText: "Happy Birthday Test"
- runFlow:
    when:
      visible: "Continue"
      platform: iOS
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Done"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: "android:id/input_method_nav_back"
- tapOn: "作品をつくる準備に進む"
- tapOn: "許可して作品をつくる"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "許可"
- assertVisible: "Happy Birthday Test.*"
